--- a/src/ui/about_dialog.ui
+++ b/src/ui/about_dialog.ui
@@ -30,7 +30,7 @@
   </property>
   <property name="font">
    <font>
-    <family>DejaVu Sans</family>
+    <family>Bitstream Vera Sans</family>
     <pointsize>10</pointsize>
    </font>
   </property>
@@ -47,66 +47,44 @@
   <property name="autoFillBackground">
    <bool>true</bool>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QFrame" name="frame">
+  <layout class="QHBoxLayout" name="horizontalLayout_main" stretch="0,1">
+   <item>
+    <widget class="QLabel" name="mudletTitleLabel">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="minimumSize">
       <size>
        <width>320</width>
        <height>360</height>
       </size>
      </property>
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
      </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
+     <property name="contextMenuPolicy">
+      <enum>Qt::NoContextMenu</enum>
      </property>
-     <widget class="QLabel" name="mudletTitleLabel">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>320</width>
-        <height>360</height>
-       </rect>
-      </property>
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>320</width>
-        <height>360</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>15</pointsize>
-       </font>
-      </property>
-      <property name="contextMenuPolicy">
-       <enum>Qt::NoContextMenu</enum>
-      </property>
-      <property name="autoFillBackground">
-       <bool>false</bool>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignBottom|Qt::AlignHCenter</set>
-      </property>
-      <property name="textInteractionFlags">
-       <set>Qt::NoTextInteraction</set>
-      </property>
-     </widget>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+     </property>
+     <property name="textInteractionFlags">
+      <set>Qt::NoTextInteraction</set>
+     </property>
     </widget>
    </item>
-   <item row="0" column="1">
+   <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
       <number>0</number>
@@ -121,7 +99,7 @@
       <attribute name="title">
        <string>Mudlet</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0">
+      <layout class="QVBoxLayout" name="verticalLayout_tab_mudlet" stretch="0">
        <property name="spacing">
         <number>0</number>
        </property>
@@ -153,7 +131,6 @@
          </property>
          <property name="font">
           <font>
-           <family>DejaVu Sans</family>
            <pointsize>9</pointsize>
           </font>
          </property>
@@ -184,7 +161,7 @@
       <attribute name="title">
        <string>Supporters</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_4">
+      <layout class="QVBoxLayout" name="verticalLayout_tab_supporters">
        <property name="spacing">
         <number>0</number>
        </property>
@@ -213,7 +190,7 @@
       <attribute name="title">
        <string>License</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout">
+      <layout class="QVBoxLayout" name="verticalLayout_tab_license">
        <property name="spacing">
         <number>0</number>
        </property>
@@ -248,7 +225,7 @@
       <attribute name="title">
        <string>Third Party</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_3">
+      <layout class="QVBoxLayout" name="verticalLayout_tab_license_3rdparty">
        <property name="spacing">
         <number>0</number>
        </property>
